Best-practice SageMaker entrypoint sourcedir and pytest

--- a/tox.ini
+++ b/tox.ini
@@ -51,7 +51,9 @@ ignore_missing_imports = True
 files = **/*.py
 
 [pytest]
-addopts = --ignore=test/s3fscompat
+addopts =
+    --ignore=test/s3fscompat
+    -v
 filterwarnings =
     # https://github.com/boto/boto3/issues/1968
     ignore:Using or importing the ABCs from 'collections' instead of from 'collections.abc' is deprecated
