--- a/tox.ini
+++ b/tox.ini
@@ -18,6 +18,9 @@ envlist = reformat,flake8,pydocstyle
 # If no setup.py, then uncomment next line
 #skipsdist = True
 
+[pydocstyle]
+match = (?!setup).*\.py
+
 [flake8]
 max-line-length = 120
 max-complexity = 10
@@ -35,16 +38,13 @@ exclude =
     test/data/
     test/refdata/
     venv/
-ignore = E203, W503
+ignore = E203, W503, E722
 
 [isort]
 # Compatibility with black (until better integration in https://github.com/psf/black/issues/333#issuecomment-549327523)
 atomic = True
+profile = black
 line_length = 120
-multi_line_output=3
-include_trailing_comma=True
-force_grid_wrap=0
-use_parentheses=True
 
 [mypy]
 ignore_missing_imports = True
@@ -63,7 +63,7 @@ filterwarnings =
 deps =
     autoflake
     black
-    isort
+    isort >= 5
     pydocstyle
 commands =
     autoflake --in-place --recursive --ignore-init-module-imports --remove-unused-variables --remove-all-unused-imports {[main]src_dir}
