Update isort config; minor code aesthetic fixes

--- a/tox.ini
+++ b/tox.ini
@@ -41,10 +41,18 @@ exclude =
 ignore = E203, W503, E722
 
 [isort]
-# Compatibility with black (until better integration in https://github.com/psf/black/issues/333#issuecomment-549327523)
 atomic = True
 profile = black
 line_length = 120
+# Feel free to customize subsequent configs -- these are for reference.
+# Mark src/smepu*/*.py as first party
+known_first_party=train,inference,bad_modname
+# Add heading before every import section
+#import_heading_future=Future
+#import_heading_stdlib=Standard library
+#import_heading_firstparty=My stuff
+#import_heading_thirdparty=Third party
+#import_heading_localfolder=Local folder
 
 [mypy]
 ignore_missing_imports = True
