--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# vscode: retain launch.json for sample invocation
+.vscode/*
+!.vscode/launch.json
+
 test/data/
 
 # Jupyter notebook's checkpoints
@@ -115,7 +119,6 @@ venv.bak/
 
 # IDE
 .c9/
-.vscode/
 .idea/
 .spyproject
 .spyderproject
